# ML-FastApi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0001_initial_users_predictions.py  0002_add_columns_to_predictions.py  0003_add_is_admin_to_users.py
examples/: api_usage.ipynb  historial_predicciones.csv
scripts/: train_model.py
src/: main.py
src/api/: deps.py
src/api/v1/: dependencies.py  router.py
src/api/v1/endpoints/: admin.py  auth.py  predictions.py  users.py
src/core/: config.py  exceptions.py  security.py
src/db/: base.py  session.py
src/db/repositories/: user_repository.py
src/models/: predict.py  train.py
src/schemas/: __init__.py  prediction.py  token.py  user.py
src/services/: auth_service.py  prediction_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_predictions.py  test_users.py
tests/test_models/: test_modedl.py
