[tool.poetry]
name = "ml-fastapi-project"
version = "0.1.0"
description = "ML API with fastAPI, Docker, PostgresSQL, and JWT auth"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python  = "^3.10"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.27"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
alembic = "^1.13"
pydantic-settings = "^2.1"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^3.2"
scikit-learn = "^1.4"
joblib = "^1.3"
httpx = "^0.27"  
email_validator = "^2.1"
pandas = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
aiosqlite = "^0.20"
black = "^24.1"
ruff = "^0.2"
pre-commit = "^3.6"

[build-system]
requires =  ["poetry-core"]
build-backend = "poetry.core.masonry.api"